--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,19 @@ android {
 		targetSdkVersion 24
 		versionCode 1
 		versionName "1.0"
+		jackOptions {
+			enabled true
+		}
 	}
 	buildTypes {
 		release {
 			minifyEnabled false
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 		}
+	}
+	compileOptions {
+		targetCompatibility 1.8
+		sourceCompatibility 1.8
 	}
 }
 
@@ -23,4 +30,10 @@ dependencies {
 
 	compile 'com.squareup.okhttp3:okhttp:3.4.1'
 	compile 'com.google.code.gson:gson:2.7'
+
+	compile 'com.melnykov:floatingactionbutton:1.3.0'
+	compile 'me.dm7.barcodescanner:zxing:1.8.4'
+	compile 'moe.feng:AlipayZeroSdk:1.0.1'
+
+	compile project(':libraries:MaterialPreference')
 }
