--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="moe.feng.nyanpasu.tile">
 
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.CAMERA"/>
+
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
+
+		<activity android:name=".ui.SettingsActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+
+		<activity android:name=".ui.ScannerActivity"
+		          android:label="@string/activity_scanner"
+		          android:theme="@style/AppTheme.Fullscreen"
+				  android:excludeFromRecents="true">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+			</intent-filter>
+		</activity>
 
 		<service android:name=".tiles.WeatherTile"
 		         android:icon="@drawable/ic_wb_sunny_white_24dp"
