--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 	compile 'com.squareup.okhttp3:okhttp:3.4.1'
 	compile 'com.google.code.gson:gson:2.7'
 
-	compile 'com.melnykov:floatingactionbutton:1.3.0'
+	compile 'com.github.clans:fab:1.6.4'
 	compile 'me.dm7.barcodescanner:zxing:1.8.4'
 	compile 'moe.feng:AlipayZeroSdk:1.0.1'
 
