--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,13 @@
 			</intent-filter>
 		</activity>
 
+		<activity android:name=".ui.RootCheckActivity"
+		          android:excludeFromRecents="true">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+			</intent-filter>
+		</activity>
+
 		<service android:name=".tiles.WeatherTile"
 		         android:icon="@drawable/ic_wb_sunny_white_24dp"
 		         android:label="@string/weather_tile_label"
